--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,23 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+/* below stuff works cuz i commeted out body class in index css */
+.body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid blue; 
+  /* width: 100vw; */
+  height: 100vh;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+.todo-container {
+  /* display: flex; */
+  /* align-items: cen; */
+  /* justify-content: center; */
+  /* align-items: center;s */
+  border: 2px solid white; 
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  .todo-item {
+    display: flex;
+    border: 1px solid white;
+    
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
